nav bar tab content align fixed

--- a/src/app/NavBar/styles.less
+++ b/src/app/NavBar/styles.less
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
         &.active {
             background-color: @colorbgmain;
         }
@@ -29,11 +30,11 @@
             fill: @colorwhite80;
             height: 100%;
             width: 18px;
-            margin-right: 10px;
         }
         .nav-tab-label {
             color: @colorwhite80;
             font-size: 15px;
+            margin-left: 10px;
         }
     }
 }
